<resources>
    <string name="app_name" translatable="false">Cineclube</string>
    <string name="pt_">pt</string>
    <string name="en_">en</string>
    <string name="sobre">sobre</string>
    <string name="desenvolvimento_de_uma_aplicacao_android_que_fornece_informacoes_sobre_a_programacao_de_filmes_a_serem_projectados_pelo_cinecult_um_cineclube_do_baixo_minho_que_so_exibe_filmes_de_culto">Desenvolvimento de uma aplicação Android que fornece informações sobre a programação de filmes a serem projectados pelo CineCult, um Cineclube do Baixo Minho que só exibe filmes de culto.</string>
    <string name="a_interface_principal_da_aplicacao_exibe_a_lista_de_filmes_programados_para_exibicao_no_cineclube_cada_filme_apresentado_com_detalhes_como_titulo_poster_data_de_exibicao_e_localizacao">A interface principal da aplicação exibe a lista de filmes programados para exibição no Cineclube. Cada filme é apresentado com detalhes como título, poster, data de exibição e localização.</string>
    <string name="jorge_lobo" translatable="false">Jorge Lobo</string>
    <string name="sair">sair</string>
    <string name="www_instagram_com_jorgelobo15" translatable="false">www.instagram.com/jorgelobo15</string>
    <string name="www_linkedin_com_in_jorgelobo15" translatable="false">www.linkedin.com/in/jorgelobo15/</string>
    <string name="github_com_jorge_lobo" translatable="false">github.com/jorge-lobo</string>
    <string name="logo" translatable="false">logo</string>
    <string name="edicao_de_filme">edição de filme</string>
    <string name="poster" translatable="false">poster</string>
    <string name="titulo">Título</string>
    <string name="genero">Género</string>
    <string name="equipa">Equipa</string>
    <string name="realizador">Realizador</string>
    <string name="actor_1">Actor 1</string>
    <string name="actor_2">Actor 2</string>
    <string name="actor_3">Actor 3</string>
    <string name="ano">Ano</string>
    <string name="____" translatable="false">_ _ _ _</string>
    <string name="duracao">Duração</string>
    <string name="min" translatable="false">min</string>
    <string name="imdb" translatable="false">IMDB</string>
    <string name="_0_0" translatable="false">0.0</string>
    <string name="enredo">Enredo</string>
    <string name="data">Data</string>
    <string name="yyyy_mm_dd" translatable="false">yyyy-MM-dd</string>
    <string name="local">Local</string>
    <string name="salvar">salvar</string>
    <string name="cancelar">cancelar</string>
    <string name="eliminar">eliminar</string>
    <string name="valor_invalido">Valor inválido</string>
    <string name="filme_eliminado_com_sucesso">Filme eliminado com sucesso</string>
    <string name="erro_ao_eliminar_filme">Erro ao eliminar filme</string>
    <string name="filme_editado_com_sucesso">Filme editado com sucesso</string>
    <string name="erro_ao_editar_filme">Erro ao editar filme</string>
    <string name="preencha_todos_os_campos">Preencha todos os campos</string>
    <string name="login_errado">Login errado</string>
    <string name="login" translatable="false">login</string>
    <string name="username" translatable="false">Username</string>
    <string name="admin" translatable="false">admin</string>
    <string name="password" translatable="false">Password</string>
    <string name="___________" translatable="false">********</string>
    <string name="pass" translatable="false">pass</string>
    <string name="lembrar_login">Lembrar login</string>
    <string name="limpar">limpar</string>
    <string name="registar">registar</string>
    <string name="facebook" translatable="false">facebook</string>
    <string name="instagram" translatable="false">instagram</string>
    <string name="youtube" translatable="false">youtube</string>
    <string name="logout" translatable="false">logout</string>
    <string name="editar">editar</string>
    <string name="elenco">elenco</string>
    <string name="_I_" translatable="false">|</string>
    <string name="estrela">estrela</string>
    <string name="escolha_a_imagem">escolha a imagem</string>
    <string name="remover">remover</string>
    <string name="ola">Olá</string>
    <string name="drop_down" translatable="false">drop down</string>
    <string name="programacao">programação</string>
    <string name="ordenacao_titulo">ordenação título</string>
    <string name="ordenacao_data">ordenação data</string>
    <string name="ordenacao_local">ordenação local</string>
    <string name="botao_adicionar">botão adicionar</string>
    <string name="novo_filme">novo filme</string>
    <string name="nova_conta">nova conta</string>
    <string name="username__" translatable="false">Username *</string>
    <string name="password__" translatable="false">Password *</string>
    <string name="confirme_password__">Confirme password *</string>
    <string name="__campos_obrigatorios">* campos obrigatórios</string>
    <string name="operacao_cancelada">Operação cancelada</string>
    <string name="filme_adicionado_com_sucesso">Filme adicionado com sucesso</string>
    <string name="erro_ao_adicionar_filme">Erro ao adicionar filme</string>
    <string name="registo_guardado_com_sucesso">Registo guardado com sucesso</string>
    <string name="erro_no_registo">Erro no registo</string>
    <string name="passwords_nao_combinam">Passwords não combinam</string>
    <string name="aplicacao_desenvolvida_por_">Aplicação desenvolvida por:</string>
    <string name="para_atender_aos_requisitos_do_projecto_a_aplicacao_possui_uma_interface_intuitiva_e_funcionalidades_especificas_para_diferentes_tipos_de_usuarios_onde_se_destaca_o_usuario_admin_com_exclusividade_nas_funcoes_crud_relacionadas_aos_filmes_isso_garante_um_controlo_eficiente_sobre_a_programacao_exibida">Para atender aos requisitos do projecto a aplicação possui uma interface intuitiva e funcionalidades específicas para diferentes tipos de usuários, onde se destaca o usuário \'admin\' com exclusividade nas funções CRUD relacionadas aos filmes. Isso garante um controlo eficiente sobre a programação exibida.</string>
    <string name="para_alem_dos_botoes_de_ordenacao_por_titulo_e_por_data_tambem_foi_adicionado_um_botao_de_ordenacao_por_localidade_permitindo_aos_usuarios_ordenarem_os_filmes_por_local_de_exibicao">Para além dos botões de ordenação por título e por data, também foi adicionado um botão de ordenação por localidade permitindo aos usuários ordenarem os filmes por local de exibição.</string>
    <string name="a_aplicacao_inicia_com_uma_splashscreen_exibindo_o_logotipo_do_cinecult_isso_proporciona_uma_experiencia_visual_agradavel_aos_usuarios_enquanto_a_aplicacao_e_carregada">A aplicação inicia com uma SplashScreen, exibindo o logotipo do CineCult. Isso proporciona uma experiência visual agradável aos usuários enquanto a aplicação é carregada.</string>
    <string name="idioma_ja_seleccionado">Idioma já seleccionado</string>
</resources>