<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey4"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:textColor="@color/background"
    tools:context=".ui.NewMovieActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView_logo_head"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logo_cc2" />

    </RelativeLayout>

    <View
        android:id="@+id/divider_top"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginHorizontal="30dp"
        android:background="@color/grey3" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/text_view_edit_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/edicao_de_filme"
                android:textAllCaps="true"
                android:textColor="@color/grey2"
                android:textSize="40sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/image_poster"
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/poster"
                android:src="@drawable/p_default" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="2"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/titulo"
                android:textAlignment="viewEnd"
                android:textColor="@color/grey1"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_title"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="5"
                android:background="@drawable/rounded_edit_text"
                android:fontFamily="sans-serif"
                android:hint="@string/titulo"
                android:inputType="text"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="2"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/genero"
                android:textAlignment="viewEnd"
                android:textColor="@color/grey1"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_genre"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="5"
                android:background="@drawable/rounded_edit_text"
                android:fontFamily="sans-serif"
                android:hint="@string/genero"
                android:inputType="text"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_crew"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="2"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/equipa"
                android:textAlignment="viewEnd"
                android:textColor="@color/grey1"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_director"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="5"
                android:background="@drawable/rounded_edit_text"
                android:fontFamily="sans-serif"
                android:hint="@string/realizador"
                android:inputType="text"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_cast1"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_edit_text"
                android:fontFamily="sans-serif"
                android:hint="@string/actor_1"
                android:inputType="text"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edit_cast2"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_edit_text"
                android:fontFamily="sans-serif"
                android:hint="@string/actor_2"
                android:inputType="text"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edit_cast3"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_edit_text"
                android:fontFamily="sans-serif"
                android:hint="@string/actor_3"
                android:inputType="text"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="2"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/ano"
                android:textAlignment="viewEnd"
                android:textColor="@color/grey1"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_year"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2.5"
                android:background="@drawable/rounded_edit_text"
                android:fontFamily="sans-serif"
                android:hint="@string/____"
                android:inputType="number"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_view_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="3"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/duracao"
                android:textAlignment="viewEnd"
                android:textColor="@color/grey1"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_duration"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:background="@drawable/rounded_edit_text"
                android:fontFamily="sans-serif"
                android:hint="@string/min"
                android:inputType="number"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_view_imdb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="2"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/imdb"
                android:textAlignment="viewEnd"
                android:textColor="@color/grey1"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_imdb"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:background="@drawable/rounded_edit_text"
                android:fontFamily="sans-serif"
                android:hint="@string/_0_0"
                android:inputType="numberDecimal"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_plot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/enredo"
                android:textAlignment="textEnd"
                android:textColor="@color/grey1"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_plot"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_gravity="top|start"
                android:background="@drawable/rounded_edit_text"
                android:fontFamily="sans-serif"
                android:gravity="top"
                android:hint="@string/enredo"
                android:inputType="textMultiLine"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_view_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/data"
                    android:textColor="@color/grey1"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edit_date"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_edit_text"
                    android:fontFamily="sans-serif"
                    android:hint="@string/yyyy_mm_dd"
                    android:inputType="text"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_view_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/local"
                    android:textColor="@color/grey1"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edit_place"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_edit_text"
                    android:fontFamily="sans-serif"
                    android:hint="@string/local"
                    android:inputType="text"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:id="@+id/divider_bottom"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginHorizontal="30dp"
        android:background="@color/grey3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:backgroundTint="@color/accent"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/salvar"
            android:textAllCaps="true"
            android:textColor="@color/grey4"
            android:textSize="15sp"
            android:textStyle="bold"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1.1"
            android:backgroundTint="@color/grey2"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/cancelar"
            android:textAllCaps="true"
            android:textColor="@color/grey4"
            android:textSize="15sp"
            android:textStyle="bold"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:backgroundTint="@color/accent"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/eliminar"
            android:textAllCaps="true"
            android:textColor="@color/grey4"
            android:textSize="15sp"
            android:textStyle="bold"
            app:cornerRadius="10dp" />

    </LinearLayout>

</LinearLayout>