<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey4"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:textColor="@color/background"
    tools:context=".ui.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView_logo_head"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logo_cc2" />

    </RelativeLayout>

    <View
        android:id="@+id/divider_top"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginHorizontal="30dp"
        android:background="@color/grey3" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/nova_conta"
            android:textAllCaps="true"
            android:textColor="@color/grey2"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/username__"
            android:textColor="@color/grey1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_edit_text"
            android:drawableStart="@drawable/user_32"
            android:fontFamily="sans-serif"
            android:hint="@string/username"
            android:inputType="text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_view_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/password__"
            android:textColor="@color/grey1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_edit_text"
            android:drawableStart="@drawable/lock_32"
            android:fontFamily="sans-serif"
            android:hint="@string/___________"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_view_confirm_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/confirme_password__"
            android:textColor="@color/grey1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_edit_text"
            android:drawableStart="@drawable/lock_32"
            android:fontFamily="sans-serif"
            android:hint="@string/___________"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/accent"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/salvar"
            android:textAllCaps="true"
            android:textColor="@color/grey4"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="10dp" />

    </LinearLayout>

    <View
        android:id="@+id/divider_bottom"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:background="@color/grey3" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/btn_cancel"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/__campos_obrigatorios"
            android:textColor="@color/grey2"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="160dp"
            android:layout_height="55dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/grey2"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/cancelar"
            android:textAllCaps="true"
            android:textColor="@color/grey4"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="10dp" />

    </RelativeLayout>

</LinearLayout>