<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/grey3"
    app:cardCornerRadius="15dp"
    app:cardElevation="1dp"
    app:cardMaxElevation="1dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_poster"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:contentDescription="@string/poster"
            android:src="@drawable/p_default" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="@string/titulo"
                android:textColor="@color/grey1"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/accent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/text_place"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/data"
                    android:textColor="@color/grey3"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/local"
                    android:textColor="@color/grey3"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>